--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ NODE_ENV=development
 PORT=3000
 API_PREFIX=api
 API_VERSION=v1
+JWT_SECRET=your_jwt_secret_key
 
 # Database
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/smartfinance?schema=public
