feat: add AuthModule with JWT authentication, Google login use case, and related services

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,6 @@ NODE_ENV=development
 PORT=3000
 API_PREFIX=api
 API_VERSION=v1
-JWT_SECRET=your_jwt_secret_key
 
 # Database
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/smartfinance?schema=public
@@ -12,6 +11,14 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=smartfinance
+
+# JWT
+JWT_SECRET=your-super-secret-jwt-key-min-32-chars
+JWT_EXPIRATION=7d
+
+# Google OAuth 2.0
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
 
 # CORS
 CORS_ORIGIN=http://localhost:3001
