--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@prisma/client": "^5.8.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^10.5.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -48,9 +49,12 @@
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.0",
     "@types/express": "^4.17.21",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/jest": "^29.5.11",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.10.6",
     "@types/passport-jwt": "^4.0.1",
+    "@types/vosk": "^0.3.1",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
     "eslint": "^8.56.0",
