--- a/package.json
+++ b/package.json
@@ -34,15 +34,19 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.4.2",
+    "@nestjs/terminus": "^11.0.0",
+    "@nestjs/throttler": "^6.5.0",
     "@prisma/client": "^5.8.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^10.5.0",
+    "nest-winston": "^1.10.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
@@ -54,6 +58,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^20.10.6",
     "@types/passport-jwt": "^4.0.1",
+    "@types/supertest": "^6.0.3",
     "@types/vosk": "^0.3.1",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
@@ -64,6 +69,7 @@
     "prettier": "^3.1.1",
     "prisma": "^5.8.0",
     "source-map-support": "^0.5.21",
+    "supertest": "^7.2.2",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
