--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,7 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 
 # CORS
 CORS_ORIGIN=http://localhost:3001
+
+# Groq AI (Fast LLM Inference)
+GROQ_API_KEY=your_groq_api_key_here
+GROQ_MODEL=llama-3.1-8b-instant
