--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.71.2",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
@@ -42,6 +41,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^10.5.0",
     "nest-winston": "^1.10.2",
+    "openai": "^6.16.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.1",
