--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=smartfinance
+# Use this for internal docker networking if needed (e.g. if you have special characters in password)
+# DATABASE_URL_DOCKER=postgresql://postgres:postgres@db:5432/smartfinance?schema=public
 
 # JWT
 JWT_SECRET=your-super-secret-jwt-key-min-32-chars
