--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3000
-      - DATABASE_URL=${DATABASE_URL_DOCKER:-postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@db:5432/${DB_NAME:-smartfinance}?schema=public}
+      - DATABASE_URL=${DATABASE_URL_DOCKER:-postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@db:${DB_PORT:-5656}/${DB_NAME:-smartfinance}?schema=public}
       - JWT_SECRET=${JWT_SECRET:-your-super-secret-jwt-key-change-in-production}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
@@ -51,15 +51,16 @@ services:
     container_name: smartfinance-db
     restart: unless-stopped
     ports:
-      - '${DB_PORT:-5656}:5432'
+      - '${DB_PORT:-5656}:${DB_PORT:-5656}'
     environment:
       - POSTGRES_USER=${DB_USER:-postgres}
       - POSTGRES_PASSWORD=${DB_PASSWORD:-postgres}
       - POSTGRES_DB=${DB_NAME:-smartfinance}
+      - PGPORT=${DB_PORT:-5656}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: [ 'CMD-SHELL', 'pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-smartfinance}' ]
+      test: [ 'CMD-SHELL', 'pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-smartfinance} -p ${DB_PORT:-5656}' ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -78,7 +79,7 @@ services:
       - '${PORT:-3000}:3000'
     environment:
       - NODE_ENV=development
-      - DATABASE_URL=${DATABASE_URL_DOCKER:-postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@db:5432/${DB_NAME:-smartfinance}?schema=public}
+      - DATABASE_URL=${DATABASE_URL_DOCKER:-postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@db:${DB_PORT:-5656}/${DB_NAME:-smartfinance}?schema=public}
       - JWT_SECRET=${JWT_SECRET:-dev-secret-key}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
