--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
         - DB_PORT=${DB_PORT:-5656}
     container_name: smartfinance-api
     restart: unless-stopped
-    ports:
-      - '${PORT:-3000}:3000'
+    # ports:
+    #   - '${PORT:-3000}:3000'
     environment:
       - NODE_ENV=production
       - PORT=3000
@@ -37,6 +37,28 @@ services:
       start_period: 40s
     depends_on:
       db:
+        condition: service_healthy
+    networks:
+      - smartfinance-network
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+  nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    container_name: smartfinance-proxy
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./certs:/etc/nginx/certs
+    depends_on:
+      app:
         condition: service_healthy
     networks:
       - smartfinance-network
