feat: Refactor Docker setup and environment configuration for improved database handling and application startup

--- a/.env.example
+++ b/.env.example
@@ -5,14 +5,13 @@ API_PREFIX=api
 API_VERSION=v1
 
 # Database
+# For local development (outside Docker)
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/smartfinance?schema=public
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT_HOST=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=smartfinance
-# Use this for internal docker networking if needed (e.g. if you have special characters in password)
-# DATABASE_URL_DOCKER=postgresql://postgres:postgres@db:5432/smartfinance?schema=public
 
 # JWT
 JWT_SECRET=your-super-secret-jwt-key-min-32-chars
