--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,39 @@
 services:
+  # ===========================================
+  # Production API Service
+  # ===========================================
   app:
     build:
       context: .
       dockerfile: Dockerfile
       target: production
-      args:
-        - DATABASE_URL=${DATABASE_URL}
-        - NODE_ENV=${NODE_ENV:-production}
-        - PORT=${PORT:-3000}
-        - DB_USER=${DB_USER:-postgres}
-        - DB_PASSWORD=${DB_PASSWORD:-postgres}
-        - DB_NAME=${DB_NAME:-smartfinance}
-        - DB_HOST=${DB_HOST:-db}
-        - DB_PORT=${DB_PORT:-5656}
     container_name: smartfinance-api
     restart: unless-stopped
     ports:
-      - '${PORT:-3000}:3000'
+      - "${PORT:-3000}:3000"
     environment:
       - NODE_ENV=production
       - PORT=3000
-      - DATABASE_URL=${DATABASE_URL_DOCKER:-postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@db:${DB_PORT:-5656}/${DB_NAME:-smartfinance}?schema=public}
-      - JWT_SECRET=${JWT_SECRET:-your-super-secret-jwt-key-change-in-production}
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DATABASE_URL=postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@db:5432/${DB_NAME:-smartfinance}?schema=public
+      - JWT_SECRET=${JWT_SECRET}
+      - JWT_EXPIRATION=${JWT_EXPIRATION:-7d}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - GROQ_API_KEY=${GROQ_API_KEY}
+      - GROQ_MODEL=${GROQ_MODEL:-llama-3.1-8b-instant}
       - CORS_ORIGIN=${CORS_ORIGIN:-http://localhost:3001}
       - THROTTLE_TTL=${THROTTLE_TTL:-60000}
       - THROTTLE_LIMIT=${THROTTLE_LIMIT:-100}
       - SWAGGER_ENABLED=${SWAGGER_ENABLED:-false}
     healthcheck:
-      test: [ 'CMD', 'wget', '--no-verbose', '--tries=1', '--spider', 'http://localhost:3000/health/live' ]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health/live"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 60s
     depends_on:
       db:
         condition: service_healthy
@@ -46,28 +45,32 @@ services:
         max-size: "10m"
         max-file: "3"
 
+  # ===========================================
+  # PostgreSQL Database
+  # ===========================================
   db:
     image: postgres:16-alpine
     container_name: smartfinance-db
     restart: unless-stopped
     ports:
-      - '${DB_PORT:-5656}:${DB_PORT:-5656}'
+      - "${DB_PORT_HOST:-5432}:5432"
     environment:
       - POSTGRES_USER=${DB_USER:-postgres}
       - POSTGRES_PASSWORD=${DB_PASSWORD:-postgres}
       - POSTGRES_DB=${DB_NAME:-smartfinance}
-      - PGPORT=${DB_PORT:-5656}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: [ 'CMD-SHELL', 'pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-smartfinance} -p ${DB_PORT:-5656}' ]
-      interval: 10s
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-smartfinance}"]
+      interval: 5s
       timeout: 5s
-      retries: 5
+      retries: 10
     networks:
       - smartfinance-network
 
-  # Development service with hot reload
+  # ===========================================
+  # Development Service (hot reload)
+  # ===========================================
   app-dev:
     build:
       context: .
@@ -76,18 +79,24 @@ services:
     container_name: smartfinance-api-dev
     restart: unless-stopped
     ports:
-      - '${PORT:-3000}:3000'
+      - "${PORT:-3000}:3000"
     environment:
       - NODE_ENV=development
-      - DATABASE_URL=${DATABASE_URL_DOCKER:-postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@db:${DB_PORT:-5656}/${DB_NAME:-smartfinance}?schema=public}
+      - PORT=3000
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DATABASE_URL=postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@db:5432/${DB_NAME:-smartfinance}?schema=public
       - JWT_SECRET=${JWT_SECRET:-dev-secret-key}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - GROQ_API_KEY=${GROQ_API_KEY}
+      - GROQ_MODEL=${GROQ_MODEL:-llama-3.1-8b-instant}
     volumes:
       - .:/app
       - /app/node_modules
-    command: npm run start:dev
+      - /app/dist
+    command: sh -c "npx prisma generate && npx prisma migrate deploy && npm run start:dev"
     depends_on:
       db:
         condition: service_healthy
