feat: Update Docker and environment configuration for Dokploy integration and Traefik routing

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ PORT=3000
 API_PREFIX=api
 API_VERSION=v1
 
+# Domain (for Dokploy/Traefik)
+API_DOMAIN=api.yourdomain.com
+
 # Database
 # For local development (outside Docker)
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/smartfinance?schema=public
