--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       target: production
     container_name: smartfinance-api
     restart: unless-stopped
-    ports:
-      - "${PORT:-3000}:3000"
+    # ports: # Commented out - Traefik handles external traffic
+    #   - "${PORT:-3000}:3000"
     environment:
       - NODE_ENV=production
       - PORT=3000
@@ -28,6 +28,14 @@ services:
       - THROTTLE_TTL=${THROTTLE_TTL:-60000}
       - THROTTLE_LIMIT=${THROTTLE_LIMIT:-100}
       - SWAGGER_ENABLED=${SWAGGER_ENABLED:-false}
+    labels:
+      # Traefik configuration for Dokploy
+      - "traefik.enable=true"
+      - "traefik.http.routers.smartfinance-api.entrypoints=websecure"
+      - "traefik.http.routers.smartfinance-api.tls.certResolver=letsencrypt"
+      - "traefik.http.routers.smartfinance-api.rule=Host(`${API_DOMAIN:-api.yourdomain.com}`)"
+      - "traefik.http.services.smartfinance-api.loadbalancer.server.port=3000"
+      - "traefik.docker.network=dokploy-network"
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health/live"]
       interval: 30s
@@ -39,6 +47,7 @@ services:
         condition: service_healthy
     networks:
       - smartfinance-network
+      - dokploy-network
     logging:
       driver: json-file
       options:
@@ -108,6 +117,9 @@ services:
 networks:
   smartfinance-network:
     driver: bridge
+  # Dokploy network - required for Traefik routing
+  dokploy-network:
+    external: true
 
 volumes:
   postgres_data:
