--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     #   - "${PORT:-3000}:3000"
     environment:
       - NODE_ENV=production
-      - PORT=3000
+      - PORT=${PORT:-3000}
       - DB_HOST=db
       - DB_PORT=5432
       - DATABASE_URL=postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@db:5432/${DB_NAME:-smartfinance}?schema=public
@@ -28,16 +28,8 @@ services:
       - THROTTLE_TTL=${THROTTLE_TTL:-60000}
       - THROTTLE_LIMIT=${THROTTLE_LIMIT:-100}
       - SWAGGER_ENABLED=${SWAGGER_ENABLED:-false}
-    labels:
-      # Traefik configuration for Dokploy
-      - "traefik.enable=true"
-      - "traefik.http.routers.smartfinance-api.entrypoints=websecure"
-      - "traefik.http.routers.smartfinance-api.tls.certResolver=letsencrypt"
-      - "traefik.http.routers.smartfinance-api.rule=Host(`${API_DOMAIN:-api.yourdomain.com}`)"
-      - "traefik.http.services.smartfinance-api.loadbalancer.server.port=3000"
-      - "traefik.docker.network=dokploy-network"
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health/live"]
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:${PORT:-3000}/health/live"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -88,10 +80,10 @@ services:
     container_name: smartfinance-api-dev
     restart: unless-stopped
     ports:
-      - "${PORT:-3000}:3000"
+      - "${PORT:-3000}:${PORT:-3000}"
     environment:
       - NODE_ENV=development
-      - PORT=3000
+      - PORT=${PORT:-3000}
       - DB_HOST=db
       - DB_PORT=5432
       - DATABASE_URL=postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@db:5432/${DB_NAME:-smartfinance}?schema=public
