--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       context: .
       dockerfile: Dockerfile
       target: production
+      args:
+        - PORT=${PORT:-3000}
     container_name: smartfinance-api
     restart: unless-stopped
     # ports: # Commented out - Traefik handles external traffic
